# fastip

./: Cargo.toml  config.yml  dnsserver.txt  readme.md
.github/workflows/: main.yml
src/: main.rs
